--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ p,li {
 body {
     width: 600px;
     margin: 0 auto;
-    background-color: #FF9500;
+    background-color:green;
     padding: 0 20px 20px 20px;
     border: 5px solid black;
   }
@@ -28,3 +28,9 @@ img {
     display: block;
     margin: 0 auto;
   }
+
+ul {
+    background-color: red;
+    color: white;
+    border : 5px solid black;
+}
